--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://xihusiyu.github.io/sihusiyu.github.io",
   "name": "build-markdown-preview",
   "version": "0.1.0",
   "private": true,
@@ -6,6 +7,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "deploy": "^1.0.3",
+    "gh-pages": "^3.2.3",
     "marked": "^2.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
@@ -15,6 +18,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
